Tri dans les clients Pagination Possibilité d'écrire dans les filtres Rassembler vue projet (marchandises et prestations dans contenu) Liens vers les projets dans les lignes Affichage adapté aux tableaux vides

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *
  *= require jquery-ui
  *= require style
+ *= require select2
+ *= require select2-bootstrap
  *= require_self
  */
 @import "style.scss";
