--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,10 @@
       <li class="nav-item">
         <a class="nav-link" href="/payments">Paiements</a>
       </li>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <%= t(I18n.locale) %> # Current selected locales
+        <span class="caret"></span>
+      </a>
     </ul>
   </div>
 </nav>
