--- a/app/views/quotations/show.html.erb
+++ b/app/views/quotations/show.html.erb
@@ -2,7 +2,7 @@
   <div id="container">
     <section id="memo">
       <div class="logo">
-        <%= image_tag "logo_greday.png" %>
+        <%= wicked_pdf_image_tag  "logo_greday.png" %>
       </div>
       <div class="company-info">
         <div>THOMAS GREDAY</div>
