--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -11,6 +11,20 @@
 
 <div class="tab-content">
   <div class="tab-pane fade show active" id="listing">
+    <%= search_form_for @search do |form| %>
+      <div class="form">
+        <div class="row">
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Name') %>
+            <%= form.select :name_eq, Customer.pluck(:name), {:include_blank => t('all_customer_names')}, {class: 'form-control', id: 'customer_name_select', onchange: 'this.form.submit();'} %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('locality') %>
+            <%= form.select :locality_eq, Customer.distinct.order(:locality).pluck(:locality), {:include_blank => t('all_customer_localities')}, {class: 'form-control', id: 'customer_locality_select', onchange: 'this.form.submit();'} %>
+          </div>
+        </div>
+      </div>
+    <% end %>
     <table class="table table-hover table-striped"  id="table-to-color">
       <thead class=thead-dark>
       <tr>
@@ -27,6 +41,11 @@
       </thead>
 
       <tbody>
+      <% unless @customers.any? %>
+        <tr>
+          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+        </tr>
+      <% end %>
       <% @customers.each do |customer| %>
         <tr data-link="<%= edit_customer_path customer %>">
           <td><%= customer.name %></td>
@@ -47,7 +66,9 @@
       </tbody>
     </table>
     <br>
-
+    <div class="flickr_pagination">
+      <%= will_paginate @customers %>
+    </div>
   </div>
   <div class="tab-pane fade" id="new">
     <%= render 'customers/new' %>
