--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -16,15 +16,15 @@
         <div class="row">
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('project') %>
-            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('status') %>
-            <%= form.select :status_eq, Invoice.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.select :status_eq, Invoice.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_select', onchange: 'this.form.submit();'} %>
           </div>
         </div>
       </div>
@@ -42,6 +42,11 @@
       </tr>
       </thead>
       <tbody>
+      <% unless @invoices.any? %>
+        <tr>
+          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+        </tr>
+      <% end %>
       <% @invoices.each do |invoice| %>
         <tr data-link="<%= edit_invoice_path invoice %>">
           <td>
@@ -63,6 +68,9 @@
       </tbody>
     </table>
     <br>
+    <div class="flickr_pagination">
+      <%= will_paginate @invoices %>
+    </div>
   </div>
   <div class="tab-pane fade" id="new">
     <%= render 'invoices/new' %>
