--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,15 +17,15 @@
 
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('project') %>
-            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('status') %>
-            <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('from') %>
@@ -58,6 +58,11 @@
       </thead>
 
       <tbody>
+      <% unless @projects.any? %>
+        <tr>
+          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+        </tr>
+      <% end %>
       <% @projects.each do |project| %>
         <tr data-link="<%= edit_project_path project %>">
           <td class="centerCell"><%= '#' + project.id.to_s %></td>
@@ -78,6 +83,9 @@
       </tbody>
     </table>
     <br>
+    <div class="flickr_pagination">
+      <%= will_paginate @projects %>
+    </div>
   </div>
   <div class="tab-pane fade" id="new">
     <%= render 'projects/new' %>
