--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -17,15 +17,15 @@
 
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('project') %>
-            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('status') %>
-            <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_select', onchange: 'this.form.submit();'} %>
           </div>
         </div>
       </div>
@@ -41,13 +41,18 @@
         <th class="centerCell"><%= t('Date') %></th>
         <th class="rightCell"><%= t('hourly_rate').to_s + ' (€/H)'  %></th>
         <th class="centerCell"><%= t('duration').to_s + ' (H)'  %></th>
-        <th class="rightCell"><%= t('tva_rate').to_s + ' (€)'  %></th>
+        <th class="rightCell"><%= t('tva_rate').to_s + ' (%)'  %></th>
         <th class="rightCell"><%= t('total_cost').to_s + ' (€)'  %></th>
         <th></th>
       </tr>
       </thead>
 
       <tbody>
+      <% unless @services.any? %>
+        <tr>
+          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+        </tr>
+      <% end %>
       <% @services.each do |service| %>
         <tr data-link="<%= edit_service_path service %>">
           <td class="centerCell">
@@ -70,6 +75,9 @@
       <% end %>
       </tbody>
     </table>
+    <div class="flickr_pagination">
+      <%= will_paginate @services %>
+    </div>
   </div>
   <div class="tab-pane fade" id="new">
     <%= render 'services/new' %>
