--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -16,15 +16,15 @@
         <div class="row">
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('project')%>
-            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_select', onchange: 'this.form.submit();'} %>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('status') %>
-            <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+            <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_select', onchange: 'this.form.submit();'} %>
           </div>
         </div>
       </div>
@@ -50,6 +50,11 @@
       </thead>
 
       <tbody>
+      <% unless @wares.any? %>
+        <tr>
+          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+        </tr>
+      <% end %>
       <% @wares.each do |ware| %>
         <tr data-link="<%= edit_ware_path ware %>">
           <td class="centerCell">
@@ -78,6 +83,9 @@
       <% end %>
       </tbody>
     </table>
+    <div class="flickr_pagination">
+      <%= will_paginate @wares %>
+    </div>
   </div>
   <div class="tab-pane fade" id="new">
     <%= render 'wares/new' %>
