--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,6 +1,6 @@
+<h2 id="titleBadge"><%= t(:service).pluralize %></h2>
 <h3>Edition Prestation</h3>
 
 <%= render 'form', service: @service %>
 
-<%= link_to 'Retour', url_for(:back) %>
 
