--- a/app/views/wares/edit.html.erb
+++ b/app/views/wares/edit.html.erb
@@ -1,5 +1,5 @@
+<h2 id="titleBadge"><%= t('ware').pluralize %></h2>
 <h3>Edition Marchandise</h3>
 
 <%= render 'form', ware: @ware %>
 
-<%= link_to 'Retour', url_for(:back) %>
