--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require style
  *= require select2
  *= require select2-bootstrap
+ *= require font-awesome
  *= require_self
  */
 @import "style.scss";
