--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,19 +1,18 @@
 <%= form_with(model: @invoice, local: true, html: {autocomplete: 'off'}) do |form| %>
-  <div class="form">
+  <div class="form center-div">
     <div class="form-row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('customer') %>
-        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', :required => true} %>
-
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'customer_edit_select'} %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('status') %>
         <%= form.select(:status, Invoice.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('date_locale') %>
         <div class="picker-container">
           <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
@@ -22,21 +21,21 @@
     </div>
     <div class="form-row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('ware').pluralize %>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+        <%= form.label t('wares_to_invoice') %>
         <%= form.select(:ware_ids, Ware.where(status: 'A facturer', project_id: nil)
             .or(Ware.where(invoice_id: @invoice ? @invoice : -1, project_id: nil))
-            .collect {|ware| [ware.ware_name, ware.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+            .collect {|ware| [ware.customer.name + ' | ' +ware.ware_name, ware.id]}, {}, {class: 'form-control', id: 'select_wares_invoice', autocomplete: 'nope', :multiple => true}) %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('project').pluralize %>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+        <%= form.label t('projects_done').pluralize %>
         <%= form.select(:project_ids, Project.where(status: 'Terminé')
             .or(Project.where(invoice_id: @invoice ? @invoice : -1))
-            .collect {|project| [project.name, project.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+            .collect {|project| [project.customer.name + ' | ' + project.name, project.id]}, {}, {class: 'form-control', id: 'select_projects_invoice', autocomplete: 'nope', :multiple => true}) %>
       </div>
 
-      <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
+      <div class="col-12 createButton">
         <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
       </div>
     </div>
