--- a/app/views/quotations/_form.html.erb
+++ b/app/views/quotations/_form.html.erb
@@ -1,40 +1,38 @@
 <%= form_with(model: @quotation, local: true, html: {autocomplete: 'off'}) do |form| %>
-  <div class="form">
+  <div class="form center-div">
+
     <div class="form-row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('customer') %>
-        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: "quotation_customer", :required => true} %>
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'customer_edit_select'} %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('status') %>
         <%= form.select(:status, Quotation.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', id: "quotation_status", autocomplete: 'nope'}) %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('date_locale') %>
         <div class="picker-container">
           <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
         </div>
       </div>
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+        <%= form.label t('project') %>
+        <%= form.grouped_collection_select :project_id, Customer.order(:name), :listmodel, :name, :id, :name, {:include_blank => t('none').capitalize}, {id: "quotation_projects", class: "form-control"} %>
+      </div>
+
     </div>
+
     <div class="form-row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('project') %>
-
-        <%= form.select(:project_id,
-                        Project.where(status: :Devis)
-                            .where('projects.id NOT IN (SELECT DISTINCT(project_id) FROM quotations WHERE project_id IS NOT NULL)')
-                            .or(Project.where(id: @quotation&.project_id))
-                            .collect {|project| [project.name, project.id]},
-                        {:include_blank => true},
-                        {class: 'form-control', id: "project_status", autocomplete: 'nope'}) %>
-      </div>
-      <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
+      <div class="col-12 createButton">
         <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
       </div>
+
     </div>
   </div>
 <% end %>
