--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -14,17 +14,17 @@
     <%= search_form_for @search do |form| %>
       <div class="form">
         <div class="row">
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
             <%= form.label t('project')%>
-            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_select', onchange: 'this.form.submit();'} %>
+            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
           </div>
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
             <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_select', onchange: 'this.form.submit();'} %>
+            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
           </div>
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
             <%= form.label t('status') %>
-            <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_select', onchange: 'this.form.submit();'} %>
+            <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
           </div>
         </div>
       </div>
@@ -74,9 +74,9 @@
           <!--        <td><%#= ware.unit_price %></td>-->
           <!--        <td><%#= ware.tva_rate %></td>-->
           <!--        <td><%#= ware.total_cost %></td>-->
-          <td>
+          <td class="centerCell">
             <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
-              <%= image_tag("delete-icon.png", size: "30x30") %>
+              <%= image_tag("delete-icon.png", size: "25x25") %>
             <% end %>
           </td>
         </tr>
@@ -84,6 +84,7 @@
       </tbody>
     </table>
     <div class="flickr_pagination">
+      <hr>
       <%= will_paginate @wares %>
     </div>
   </div>
