--- a/app/views/projects/_show.html.erb
+++ b/app/views/projects/_show.html.erb
@@ -19,7 +19,7 @@
 <div class="tab-content">
   <div class="tab-pane fade show active" id="content">
     <h5><%= t('ware').pluralize %></h5>
-    <table class="table table-hover table-striped ">
+    <table class="table table-hover table-striped" id="table-to-color">
       <thead class=thead-dark>
       <tr>
         <th><%= t('ware_name') %></th>
@@ -41,7 +41,7 @@
           <td><%= ware.ware_name %></td>
           <td><%= ware.provider_name %></td>
           <td><%= ware.comment %></td>
-          <td><%= ware.status %></td>
+          <td id="status-cell"><%= ware.status %></td>
           <td class="centerCell">
             <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
               <%= image_tag("delete-icon.png", size: "25x25") %>
@@ -53,7 +53,7 @@
     </table>
     <h5><%= t('service').pluralize %></h5>
 
-    <table class="table table-hover table-striped">
+    <table class="table table-hover table-striped" id="table-to-color2">
       <thead class=thead-dark>
       <tr>
         <th><%= t('Name') %></th>
@@ -78,7 +78,7 @@
         <tr data-link="<%= edit_service_path service %>">
           <td><%= service.name %></td>
           <td><%= service.comment %></td>
-          <td><%= service.status %></td>
+          <td id="status-cell"><%= service.status %></td>
           <td><%= service.date %></td>
           <td><%= service.hourly_rate %></td>
           <td><%= service.duration.strftime('%H:%M') %></td>
